--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     <style>
         body {
             font-family: 'Cairo', sans-serif;
-            background-color: #f8faff; /* خلفية فاتحة ومريحة */
+            background-color: #f8faff;
             direction: rtl;
         }
-        /* الألوان الرئيسية */
         .primary-color { color: #007bff; }
         .bg-primary { background-color: #007bff; }
-        .bg-secondary { background-color: #4CAF50; } /* أخضر للدلالة على النجاح */
+        .bg-secondary { background-color: #4CAF50; }
         .btn-hover:hover { background-color: #0056b3; }
-        /* أنماط الكود المخصص */
         .code-block {
             background-color: #f1f5f9;
             border-right: 5px solid #007bff;
             font-family: monospace;
-            direction: ltr; /* الكود يظهر من اليسار لليمين */
+            direction: ltr; 
             text-align: left;
-            user-select: all; /* للسماح بنسخ الكل بسهولة */
+            user-select: all; 
             font-size: 15px;
             overflow-x: auto;
         }
@@ -67,44 +65,17 @@
 
             <div class="code-block p-4 rounded-lg">
                 &lt;!-- كود الشات المخصص لنظامك --&gt;<br>
-                &lt;script src="https://[Your-GitHub-Name].github.io/Custom-Live-Chat-System/widget.js" <br>
-                data-chat-token="[ضع_التوكن_الفريد_للعميل_هنا]" <br>
+                &lt;script src="https://[اسم_حسابك].github.io/Custom-Live-Chat-System/widget.js" <br>
+                data-chat-token="[التوكن_الفريد_للموقع]" <br>
                 async&gt;&lt;/script&gt;
             </div>
 
              <div class="mt-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 text-yellow-800 rounded-md">
                  <p class="font-bold">ملاحظة هامة للاختبار:</p>
-                 <p>للتأكد من عمل التوكن (Token)، زر الموقع الآن ولاحظ الزر العائم في الزاوية.</p>
+                 <p>هذا الكود هو سطر المنتج النهائي. للاختبار الآن، شاهد الزر العائم في الزاوية السفلى اليسرى (أو اليمنى).</p>
              </div>
         </section>
-
-        <section class="mb-20">
-            <h3 class="text-3xl font-bold mb-10 text-center text-gray-900">
-                لماذا نظامنا هو الأفضل؟
-            </h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                
-                <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition duration-300">
-                    <svg class="w-10 h-10 primary-color mb-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
-                    <h4 class="text-xl font-bold mb-2">ربط التوكن (Tokenized)</h4>
-                    <p class="text-gray-600">كل موقع يحصل على توكن فريد لضمان توجيه الرسائل بدقة إلى لوحة التحكم الصحيحة، مما يوفر الأمان والفصل التام بين بيانات العملاء.</p>
-                </div>
-
-                <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition duration-300">
-                    <svg class="w-10 h-10 primary-color mb-4" fill="currentColor" viewBox="0 0 24 24"><path d="M21 15.61l-5.18-5.18c-.28-.28-.7-.44-1.13-.44H14V7c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1v2H7.72c-.43 0-.85.16-1.13.44L1.47 15.61c-.3.3-.47.7-.47 1.15v3.24c0 .55.45 1 1 1h19c.55 0 1-.45 1-1v-3.24c0-.45-.17-.85-.47-1.15zM4 17h16v1H4v-1z"/></svg>
-                    <h4 class="text-xl font-bold mb-2">تصميم متجاوب (Responsive)</h4>
-                    <p class="text-gray-600">يظهر الشات بشكل مثالي على جميع الأجهزة (المكتبية، الهواتف الذكية والأجهزة اللوحية)، مما يضمن تجربة مستخدم ممتازة لزوار مواقع عملائك.</p>
-                </div>
-
-                <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition duration-300">
-                    <svg class="w-10 h-10 primary-color mb-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
-                    <h4 class="text-xl font-bold mb-2">وضع الوكلاء الديناميكي</h4>
-                    <p class="text-gray-600">يعرض الشات حالة الوكيل (متصل/غير متصل) بشكل حيوي، مما يزيد من ثقة المستخدم ويعطيه توقعاً واضحاً لوقت الرد.</p>
-                </div>
-            </div>
-        </section>
-
-
+        
         <section class="mb-10 text-center p-8 bg-white rounded-xl shadow-inner">
             <h3 class="text-3xl font-bold mb-4 primary-color">
                 شاهد الشات يعمل الآن!
