--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 
             <div class="code-block p-4 rounded-lg">
                 &lt;!-- كود الشات المخصص لنظامك --&gt;<br>
-                &lt;script src="https://[اسم_حسابك].github.io/Custom-Live-Chat-System/widget.js" <br>
+                &lt;script src="https://YOUR_USERNAME.github.io/Custom-Live-Chat-System/widget.js" <br>
                 data-chat-token="[ضع_التوكن_الفريد_للعميل_هنا]" <br>
                 async&gt;&lt;/script&gt;
             </div>
 
              <div class="mt-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 text-yellow-800 rounded-md">
-                 <p class="font-bold">ملاحظة هامة:</p>
-                 <p>تأكد من تغيير **[اسم_حسابك]** إلى اسم حسابك الفعلي على GitHub ليعمل الرابط، ثم قم بزيارة هذه الصفحة لمشاهدة زر الشات يعمل.</p>
+                 <p class="font-bold">مهم جداً!</p>
+                 <p>يجب عليك تغيير **YOUR_USERNAME** في السطر الثالث من الكود أعلاه إلى اسم حسابك الفعلي على GitHub.</p>
              </div>
         </section>
         
